fixed auth bug
