# src/docs/swagger.json
@@ -8,7 +8,7 @@
             "post": {
                 "parameters": [
                     {
-                        "description": "Username and hashed password",
+                        "description": "Username and password",
                         "name": "userInDB",
                         "in": "body",
                         "required": true,
@@ -54,13 +54,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "access_token",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "name": "token_type",
-                        "in": "header"
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "description": "Poll object",
@@ -118,13 +115,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "access_token",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "name": "token_type",
-                        "in": "header"
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -169,13 +163,10 @@
                     },
                     {
                         "type": "string",
-                        "name": "access_token",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "name": "token_type",
-                        "in": "header"
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
